@@ -1,6 +1,9 @@
 Changes from jTDS 0.9-rc1
 =========================
 
+08/13/2004 - Brian Heineman
+ o Added test for bug [1008208] 0.9-rc1 updateNull doesn't work
+
 08/13/2004 - David Kilzer
  o Applied patch to check if connection is null before calling
    connection.isClosed() in JtdsStatement.  Patch posted to
